--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="NoWifiNewsText">No Wifi. Sorry for the inconvenience. Try again later.</string>
     <string name="loadingMenuText">LOADING.....</string>
     <string name="loading">Loading</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
