--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,14 @@
     <string name="app_name">V1.0605 Revera</string>
 
     <string name="ReveraLocation">leaside</string>
+    <string name="ReveraCompany">reveraconnect.com</string>
 
     <string name="_0_deg">0 deg</string>
     <string name="cweather">cWeather</string>
     <string name="tab">\u0009</string>
-    <string name="recreationLoading">Loading Recreation Activities</string>
+    <string name="recreationLoading">Loading....</string>
     <string name="NoWifiNewsText">No Wifi. Sorry for the inconvenience. Try again later.</string>
-    <string name="loadingMenuText">LOADING.....</string>
+    <string name="loadingMenuText">LOADING....</string>
     <string name="loading">Loading</string>
 
     <!-- TODO: Remove or change this placeholder text -->
